manifests/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: azaleh/portfolio:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-secret
