manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 80
